added controllers and locales message
