# src/swagger/v2.yaml
@@ -28,6 +28,36 @@ paths:
           description: 'Server is alive'
         500:
           description: 'Server error'
+  /auth/is-unique:
+    get:
+      description: check if value already exists in database
+      tags:
+        - auth
+      parameters:
+        - name: type
+          in: query
+          description: type 
+          required: true
+          explode: true
+          schema:
+            type: string
+            default: email
+            enum:
+              - email
+              - mobile
+        - name: value
+          in: query
+          description: value 
+          required: true
+          type: string
+          example: superadmin@mail.com
+      responses:
+        '200':
+          description: OK
+        '400':
+          description: Bad Request
+        '500':
+          description: Server Error
   /auth/login:
     post:
       description: user login
@@ -46,7 +76,7 @@ paths:
               properties:
                 role:
                   type: string
-                  example: user
+                  example: admin
                 email:
                   type: string
                   example: superadmin@mail.com
